# to-do-app

./: .gitignore  README.md
todoapp_backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml
todoapp_backend/alembic/: env.py
todoapp_backend/alembic/versions/: 6c33b02360af_insert_data.py  71cc56eecfeb_add_some_table.py  d55b45b39bf3_initial_migration.py
todoapp_backend/tests/: test_crud.py
todoapp_backend/todoapp_backend/: main.py
todoapp_backend/todoapp_backend/models/: todo.py
todoapp_backend/todoapp_backend/routes/: todo.py
todoapp_backend/todoapp_backend/schemas/: setting.py  todo.py
todoapp_backend/todoapp_backend/utils/: database.py
todoapp_frontend/: pyproject.toml
todoapp_frontend/todoapp_frontend/: streamlit_app.py
